mobile responsive and alignment fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -531,6 +531,7 @@ h4.product-name {
   flex-direction: column;
   gap: 5px;
   font-weight: 500;
+  font-size: 12px;
 }
 
 .price-span>span {
